[package]
name = "VideoReencodingNet"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11" , features = ["full"]}
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
env_logger = "0.11.8"
log = "0.4.27"
http-body-util = "0.1.3"

